[package]
name = "handshake-dapp"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
qrcode-generator = "4.1.8"
base64 = "0.13"
hex = "0.4.3"
js-sys = "0.3.63"
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3", features = ['Location'] }
anyhow = "1.0.71"
serde = "1.0.163"
serde_json = "1.0.96"
futures = "0.3.28"

[features]
github = []
